Perkin-UAT/force-app/main/default/objects/Approver_DOA_Level_Matrix__c/Approver_DOA_Level_Matrix__c.object-meta.xml
<CustomObject>
    <description>Used in AA. Stores the Approvers of the sales rep.Bussiness to maintain it.(Source:S-692496)</description>
    <label>Approver DOA Level Matrix</label>
    <nameField>
        <displayFormat>DOA-{000000}</displayFormat>
        <label>DOA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvers DOA Level Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>