Perkin-UAT/force-app/main/default/objects/Approver_DOA_Level_Matrix__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in AA.To store the sales rep(Source:S-692496)</description>
    <inlineHelpText>Used in AA.(Source:S-692496)</inlineHelpText>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers_DOA_Level_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>