Perkin-UAT/force-app/main/default/objects/Approver_DOA_Level_Matrix__c/fields/Sales_Rep_DOA_Level5__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_DOA_Level5__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in AA.(Source:S-692496)</description>
    <inlineHelpText>Used in AA.(Source:S-692496)</inlineHelpText>
    <label>Sales Rep DOA Level5</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers_DOA_Level_Matrix4</relationshipName>
    <type>Lookup</type>
</CustomField>