Perkin-UAT/force-app/main/default/objects/Approver_DOA_Level_Matrix__c/listViews/Approvers_All.listView-meta.xml
<ListView>
    <fullName>Approvers_All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sales_Rep_DOA_Level2__c</columns>
    <columns>Sales_Rep_DOA_Level3__c</columns>
    <columns>Sales_Rep_DOA_Level4__c</columns>
    <columns>Sales_Rep_DOA_Level5__c</columns>
    <columns>Sales_Rep_DOA_Level6__c</columns>
    <columns>Sales_Rep_DOA_Level7__c</columns>
    <columns>Sales_Rep_DOA_Level8__c</columns>
    <columns>Sales_Rep_DOA_Level9__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Rep_DOA_Level2__c</field>
        <operation>equals</operation>
        <value>マサヒコ アオキ</value>
    </filters>
    <label>Approvers: (All)</label>
</ListView>