Perkin-UAT/force-app/main/default/objects/Approver_DOA_Level_Matrix__c/listViews/DX_Project_DOA_Updated_User.listView-meta.xml
<ListView>
    <fullName>DX_Project_DOA_Updated_User</fullName>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sales_Rep_DOA_Level2__c</columns>
    <columns>Sales_Rep_DOA_Level3__c</columns>
    <columns>Sales_Rep_DOA_Level4__c</columns>
    <columns>Sales_Rep_DOA_Level5__c</columns>
    <columns>Sales_Rep_DOA_Level6__c</columns>
    <columns>Sales_Rep_DOA_Level7__c</columns>
    <columns>Sales_Rep_DOA_Level8__c</columns>
    <columns>Sales_Rep_DOA_Level9__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>11/3/2023 12:00 AM</value>
    </filters>
    <label>DX Project DOA Updated User</label>
</ListView>